Fix viewport height on mobile

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 .content {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 15% auto 25%;
